--- a/.github/workflows/contrib-readme.yml
+++ b/.github/workflows/contrib-readme.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Contribute List
         uses: akhilmhdh/contributors-readme-action@v2.3.11
         env:
-          GITHUB_TOKEN: ${{ secrets.ACTION_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
